override cz